[package]
name = "octave-langserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
lsp-server = "0.7.0"
lsp-types = "0.93.2"
serde = "1.0.152"
serde_json = "1.0.91"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
serial_test = "1.0.0"
